--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "4.17.1",
     "socket.io": "2.3.0",
-    "tail": "2.0.3"
+    "tail": "2.0.3",
+    "yargs": "^14.2.0"
   }
 }
